Fix text controller flexbox alignment

--- a/src/components/text-controller/_text-controller.scss
+++ b/src/components/text-controller/_text-controller.scss
@@ -93,9 +93,9 @@
     display: flex;
     align-items: center;
     @if $text-direction == 'rtl' {
-      justify-content: start;
+      justify-content: flex-start;
     } @else {
-      justify-content: end;
+      justify-content: flex-end;
     }
   }
 }
